# 2026-bot-tw-unbrokened

./: .gitignore  Assist.md  Contribguide.md  Controls.md  README.md  TODO.md  _config.yml  build.gradle  commitguide.md  deploy-guide.md  deploy_instructions.md  file_breakdown.md  package-lock.json  setup.bat  setup.sh  spotlessapply  styleguide.md  todo before compition .md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  hardware_issue.yml
.github/workflows/: build.yml  spotless.yml  update-breakdown.yml
.wpilib/: wpilib_preferences.json
dashboard/: app.py  requirements.txt
dashboard/templates/: index.html
src/main/deploy/pathplanner/: settings.json
src/main/deploy/pathplanner/autos/: Deep Double Take (Trench to Nz Across).auto  Double Take (Trench to Nz Across).auto  Ground-Pounder (Hub to Nz to Depot).auto  Hub Hugger (Trench to Nz to Hub Nz).auto  Hub Shot.auto  Loop The Loop (Trench to Nz x2) .auto  Midline Loop (Hub to Nz) .auto  One Shot (Trench Start).auto  The Loop (Hub to Nz) .auto  The Loop II (Hub to Nz).auto  XXXXX All-Rounder (Hub to Nz to Outpost).auto  XXXXX Lightning (Trench to Outpost).auto  XXXXX Test Auto (Hub to Nz).auto  XXXXX Test Intake.auto  (+1 more)
utilities/: autoaim_data.csv.bak  autoaim_data.db  autoaim_regression_gui.py  config_backup.py  pit_health_check.py  requirements.txt  test_joystick_turret.py  test_tk_arc.py  turret_sim.py  update_breakdown.py
utilities/pit-health-check-gui/: Cargo.toml  nt4_bridge.py
utilities/pit-health-check-gui/src/: main.rs
(+108 files in other folders)
