[package]
name = "pit-health-check-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
futures-util = "0.3.32"
serde = "1.0.228"
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.28.0"
tungstenite = "0.28.0"
url = "2.5.8"
ws = "0.9.2"
